--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,10 +1,51 @@
-.cardContainer{
+.contenedorLista {
     display: flex;
-    flex-wrap: no-wrap;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 20px auto;
 }
 
-.cards{
-    flex-direction: row;
-    width: 30px;
-    height: 30px;
+.cardContainer {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(199, 166, 166);
+    padding: 15px;
+    margin: 5px auto;
+    box-shadow: 2px 1px 1px #474747b2;
+    border-radius: 5px;
+}
+
+.imageCard {
+    width: 80%;
+    height: auto;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.imageCard img {
+    width: 100%;
+    height: 270px;
+    margin: auto;
+    border-radius: 15px;
+}
+
+.detailsCard {
+    width: 80%;
+
+}
+
+.detailsCard h5 {
+    width: 100%;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
