--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(199, 166, 166);
+    background-color: rgb(248, 226, 226);
     padding: 15px;
     margin: 5px auto;
     box-shadow: 2px 1px 1px #474747b2;
@@ -48,4 +48,30 @@
     font-size: 20px;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.buttonComprar {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+}
+
+.buttonComprar button {
+    width: 60%;
+    height: 50px;
+    padding: 5px;
+    background-color: #747174;
+    border: hidden;
+    border-radius: 5px;
+    font-size: 18px;
+    font-family: sans-serif;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+ .buttonComprar button:hover {
+    background-color: red;
+    color: #fff;
+    border: 2px solid black;
 }
