--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,54 +1,11 @@
-.contenedorLista {
+.ListGroup {
     display: flex;
-    justify-content: center;
+    width: 100%;
+    justify-content:center;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 80%;
     margin: 20px auto;
-}
 
-.cardContainer {
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(248, 226, 226);
-    padding: 15px;
-    margin: 5px auto;
-    box-shadow: 2px 1px 1px #474747b2;
-    border-radius: 5px;
-}
-
-.imageCard {
-    width: 80%;
-    height: auto;
-    padding: 5px;
-    display: flex;
-    justify-content: center;
-
-}
-
-.imageCard img {
-    width: 100%;
-    height: 250px;
-    margin: auto;
-    border-radius: 15px;
-    border: solid black;
-}
-
-.detailsCard {
-    width: 80%;
-
-}
-
-.detailsCard h5 {
-    width: 100%;
-    text-align: center;
-    font-family: sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
 }
 
 .buttonVerdetalle {
