--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,19 +1,19 @@
-.contenedorLista{
+/* .contenedorLista{
     display: flex;
     justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 80%;
-    margin: 20px auto;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    width: 255%;
 }
 
 .cardContainer {
-    width: 25%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(248, 226, 226);
+    background-color: rgba(226, 204, 204, 0.603);
     padding: 15px;
     margin: 5px auto;
     box-shadow: 2px 1px 1px #474747b2;
@@ -47,4 +47,57 @@
     font-size: 20px;
     font-weight: bold;
     text-transform: uppercase;
+} */
+
+.containerCard{
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 15px;
+    height: auto;
+
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width: 80%;
+    margin: auto;
+    padding: 10px;
+    height: auto;
+    background-color: rgb(153, 159, 153);
+    border-radius: 10px;
+
+
+}
+
+.card .imagen{
+    width: 100%;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.imagen img{
+    width: 250px;
+    height: 250px;
+    margin: auto;
+}
+
+.details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    text-align: center;
+
 }
