--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -3,12 +3,12 @@
     justify-content: center;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 20%;
+    width: 25%;
     margin: 20px auto;
-    font-size: 10px;
-    background-color:  rgb(248, 226, 226);
+    font-size: 12px;
+    background-color:  rgb(215, 208, 208);
     color: black;
-    border-radius: 2px;
+    border-radius: 3px;
 }
 
 .containerDetail img{
@@ -17,7 +17,13 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin: 20px auto;
-    width: 50%;
+    width: 40%;
     height: 40%;
     border-radius: 5px;
+}
+
+.itemDetails{
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
