--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,17 +5,17 @@ header {
     display: flex;
     flex-direction: row;
     background-color: white;
-    box-shadow: 2px 2px 2px rgba(110, 107, 107, 0.781);
+    box-shadow: 3px 3px 3px rgba(110, 107, 107, 0.781);
 }
 
 .img-logo img {
-    width: 150px;
+    width: 130px;
     height: 90px;
     padding: 5px;
 }
 
 nav {
-    width: 70%;
+    width: 90%;
     height: auto;
     display: flex;
     flex-direction: row;
@@ -26,39 +26,48 @@ nav {
 
 nav ul {
     width: 100%;
+    height: auto;
     display: flex;
+    justify-content: flex-end;
+    align-items: center;
     flex-direction: row;
-    justify-content: space-around;
+    height: 80px;
 }
 
 nav ul li {
     list-style: none;
-    width: 150px;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
+    height: 60px;
+    margin: 25px;
+    width: 10%;
 
 }
 
 nav ul li a {
+    width: 100%;
     text-decoration: none;
     font-weight: bold;
     color: black;
     padding: 2px;
     border-radius: 5px;
     font-family: sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    margin: 5px auto;
 
 }
 
 body {
-    background-color: rgb(209, 198, 198);
+    background-color: rgb(236, 233, 233);
 
 }
 
-.cart {
-    width:  2px;
-    height: 2px;
-}
+
 
 
 
